gRPC/grpc-custom-connect/first-istio-expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: first
  namespace: istio-system
  labels:
    app: first
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: first
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: first-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - first-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: first
            port:
              number: 8080
